adding most logic but still not all